@@ -5,7 +5,6 @@ from base import AbstractProvider
 from sorteddisplaytuple import SortedDisplay
 
 # TODO: I can get good sized thumbnails from tmdb with 'w780' instead of 'original' in the URL
-# TODO: Reweigh ratings, as this does the exact opposite of thetvdb, and weighs each single rating very lowly, images rarely hit 6 stars, nor go lower than 4.7
 
 class TheMovieDBAbstractProvider(AbstractProvider):
     # pylint: disable=W0223
@@ -61,8 +60,6 @@ class TheMovieDBProvider(TheMovieDBAbstractProvider):
                 resultimage['language'] = image['iso_639_1']
                 resultimage['rating'] = self._get_rating(image)
                 resultimage['size'] = SortedDisplay(image['width'], '%sx%s' % (image['width'], image['height']))
-                if arttype == 'poster' and image['aspect_ratio'] > 0.685 or image['aspect_ratio'] < 0.66:
-                    resultimage['status'] = providers.GOOFY_IMAGE
                 result[generaltype].append(resultimage)
         return result
 
