@@ -4,3 +4,6 @@ v0.0.1~dev
 - Add series artwork from TheTVDB
 - Add movie artwork from TheMovieDb
 - Add episode artwork from TheMovieDb
+- Select specific artwork for individual media items
+- Grab all missing artwork for a single item, all items, or new items added since last run
+- A service to watch for library updates and grab artwork for new items
